-*- mode: fundamental -*-

[I] Support multipart upload (for speed)
[ ] Support copying s3 -> s3 (Depends on multipart support)

3.0.0: (unreleased)
[x] Support permanent/temporary redirect error code
[x] Return an error indicating the redirect to successive calls
[x] Switch to use Digistif module
[x] Remove support for gzip
    - Users can set the content encoding to gzip, and use ezgzip instead
[x] Compatability with base.v0.11.0

2.0.0:
[x] Calling delete multi with an empty list is now a noop
[x] Return Md5.t digest type instead of strings
[x] Fix multi delete
[x] Support range get
[x] Compatibility with core >= v0.9.0
[x] Split into multiple packages (aws-s3-lwt / aws-s3-async / aws-s3)
[x] Funtorize over the concurrency monad (Async / Lwt)
[x] Dont compile with -safe-string
[x] return md5 of uploaded file

1.1.0:
[x] Switch to use ppx_deriving_protocol, and compile with -safe-string

1.0.0:
[x] Switch to use jbuilder and require core >= 0.9.

0.9.0:
[x] initial release