@@ -1,1 +1,1 @@
-include Aws_s3.Types.Compat with type 'a deferred = 'a Async.Deferred.t
+include Aws_s3.Types.Compat with type 'a Deferred.t = 'a Async.Deferred.t
